# comfyui-llm-wildcard-manager

./: .comfyignore  .gitignore  LICENSE  README.md  __init__.py  llm_wildcard_node.py  pyproject.toml  requirements.txt  wildcard_categories.json
example_workflows/: llm_wildcard_basic.json
web/: llm_wildcard.js
